<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">IntegracionMercadopago</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_log_in">Iniciar Sesión</string>
    <string name="action_sign_in">Registrarse</string>
    <string name="button_register">¿No tenés cuenta? <u><b>Registrate</b></u></string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
</resources>
